<resources>
    <string name="about">About</string>
    <string name="acuity_0">Strong</string>
    <string name="acuity_1">Standard</string>
    <string name="acuity_2">Soft</string>
    <string name="all_permissions">Please authorize all permissions</string>
    <string name="already_update">latest</string>
    <string name="app_name">XDV PRO</string>
    <string name="app_productor">Produced by XDV PRO</string>
    <string name="app_version">Software Version</string>
    <string name="app_version_update">Update</string>
    <string name="auto_shutdown_0">Turn off</string>
    <string name="auto_shutdown_1">3 min</string>
    <string name="auto_shutdown_2">5 min</string>
    <string name="auto_shutdown_3">10 min</string>
    <string name="back">Back</string>
    <string name="big_file_over_200M">Over 200M, please download first!</string>
    <string name="big_file_storage_notenougth">Big File,No more storage!</string>
    <string name="big_file_storage_notenougth_download_fail">Download Fail,No more storage!</string>
    <string name="boot_capture_mode_0">Normal</string>
    <string name="boot_capture_mode_1">Timed</string>
    <string name="boot_capture_mode_2">Time-lapse</string>
    <string name="boot_capture_mode_3">Trajectory</string>
    <string name="boot_mode_0">Capture</string>
    <string name="boot_mode_1">Record</string>
    <string name="bracket_left"> (</string>
    <string name="bracket_right">) </string>
    <string name="cancel">Cancel</string>
    <string name="cannot_connect_please_reconnect">Overtime Connection with the Device! \10 \10 Click Confirm to conduct Connection again!</string>
    <string name="capture_auto_0">Turn Off</string>
    <string name="capture_auto_1">3s</string>
    <string name="capture_auto_2">10s</string>
    <string name="capture_auto_3">15s</string>
    <string name="capture_auto_4">20s</string>
    <string name="capture_auto_5">30s</string>
    <string name="capture_error_check_tfcard">Capture Fail,Please Check up TF Card！</string>
    <string name="capture_timing_0">Turn Off</string>
    <string name="capture_timing_1">3s</string>
    <string name="capture_timing_2">5s</string>
    <string name="capture_timing_3">10s</string>
    <string name="capture_timing_4">20s</string>
    <string name="capture_trajectory_0">Turn Off</string>
    <string name="capture_trajectory_1">3P/S</string>
    <string name="capture_trajectory_2">5P/S</string>
    <string name="capture_trajectory_3">10P/S</string>
    <string name="capture_trajectory_4">20P/S</string>
    <string name="capturing_not_allow_doing_anything">Options Not Allowed In Timing!</string>
    <string name="checking_update">checking...</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_exit_download">Download will be aborted! \10 Sure exit?</string>
    <string name="confirm_password">Confirm</string>
    <string name="connect">Connection</string>
    <string name="connect_dev_to_upload_fw">Click \'update\' again \10 while connecting device!</string>
    <string name="connect_wifi_overtime">Connection Overtime！</string>
    <string name="connect_wifi_success">WiFi connection succeeded!</string>
    <string name="connecting">Current Connection</string>
    <string name="connectting_wifi">Connecting %1$s！</string>
    <string name="dev_storage_limit">No more storage, please back up!</string>
    <string name="dev_version">Device Version</string>
    <string name="dev_version_update">Update</string>
    <string name="device_connect_overtime">Connect Over Time \10 Please Check The WiFi!</string>
    <string name="device_disconnect">Device disconnected!</string>
    <string name="device_id">SSID</string>
    <string name="device_is_preparing">Device is Preparing!</string>
    <string name="device_offline">Device is OFFLINE!</string>
    <string name="download_size">(%1$s/%2$s)</string>
    <string name="download_speed">%1$s/s</string>
    <string name="downloading_fw_version">Downloading firmware %1$s</string>
    <string name="downloading_version">Downloading v%1$s</string>
    <string name="edit_photo_no_change">Photo has no change!</string>
    <string name="edit_photo_save_err">Saved fail!</string>
    <string name="edit_photo_save_succ">Saved success!</string>
    <string name="edit_photo_saved">save</string>
    <string name="edit_photo_share_err">Share err!</string>
    <string name="edit_photo_share_not_offline_plz_save">Please save the photo first,while is connecting!</string>
    <string name="edit_photo_share_now">share</string>
    <string name="edit_video_not_support">Will open soon!</string>
    <string name="exit">Quit</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_shuffle_description">Shuffle</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exposure_0">-3</string>
    <string name="exposure_1">-2</string>
    <string name="exposure_2">-1</string>
    <string name="exposure_3">0</string>
    <string name="exposure_4">1</string>
    <string name="exposure_5">2</string>
    <string name="exposure_6">3</string>
    <string name="fail">Failed!</string>
    <string name="file_accepting_sos_file">downlading sos file!</string>
    <string name="file_damage">Sorry, the damaged file can\'t play!</string>
    <string name="file_delete_ok">Deleted Successfully!</string>
    <string name="file_deleting">Deleting...</string>
    <string name="file_dev_has_no_card">No TFCard In Current Device!</string>
    <string name="file_dir_has_no_file">Empty Folder!</string>
    <string name="file_download_end">Download End!</string>
    <string name="file_download_fail">Download failed!</string>
    <string name="file_download_overtime">Overtime Download!</string>
    <string name="file_download_success">Successfully Downloaded!</string>
    <string name="file_downloading_in_progress">(%1$.2f%%)</string>
    <string name="file_downloading_in_progress_only">(%1$.2f%%)</string>
    <string name="file_has_cached">(Cached)</string>
    <string name="file_has_downloaded">(Downloaded)</string>
    <string name="file_loading">loading...</string>
    <string name="file_loading_error">File loaded error!</string>
    <string name="file_not_a_sos_file">isn\'t sos file!</string>
    <string name="file_opt_delete">Delete</string>
    <string name="file_opt_dev_delete">XDV PRO Delete</string>
    <string name="file_opt_download">Download</string>
    <string name="file_opt_loc_delete">Phone Delete</string>
    <string name="file_opt_share">Share</string>
    <string name="file_opt_sync">Sync</string>
    <string name="file_photo">Photos</string>
    <string name="file_record">Videos</string>
    <string name="file_sos">SOS Files</string>
    <string name="file_top_dev">XDV PRO</string>
    <string name="file_top_local">Phone</string>
    <string name="files_array_mode_0">Latest-Oldest</string>
    <string name="files_array_mode_1">Oldest-Latest</string>
    <string name="formating_tf_card">Formatting...</string>
    <string name="gpsNotifyMsg">This APP needs to turn on the GPS. \10\10 Please click \"Set\"-\"locate service\"-Open GPS.</string>
    <string name="is_the_latest_version">Latest Version Now!</string>
    <string name="iso_0">Auto</string>
    <string name="iso_1">200</string>
    <string name="iso_2">200</string>
    <string name="iso_3">400</string>
    <string name="iso_4">800</string>
    <string name="iso_5">1600</string>
    <string name="language0">Simplified Chinese</string>
    <string name="language1">Traditional Chinese</string>
    <string name="language2">English</string>
    <string name="light_0">Auto</string>
    <string name="light_1">50HZ</string>
    <string name="light_2">60HZ</string>
    <string name="main_choose_all">Select All</string>
    <string name="main_choose_none">Unselect All</string>
    <string name="main_double_click_return_desktop">Click again and go back to Desktop</string>
    <string name="main_file">Media Gallery</string>
    <string name="main_has_select">%1$d Selected</string>
    <string name="main_setting">Settings</string>
    <string name="main_video">Shoot</string>
    <string name="mmsize_left">Available:</string>
    <string name="mmsize_total">Total:</string>
    <string name="motion_capture_loading">Capturing...</string>
    <string name="new_password">New Password</string>
    <string name="not_online_sure_offline_enter">Offline.\10Enter Offline Mode or not?</string>
    <string name="offline">Offline</string>
    <string name="offline_to_check_update">Please check update in offline mode!</string>
    <string name="old_password">Previous Password</string>
    <string name="opening_wifi">WiFi connection is enabling...</string>
    <string name="opt_capture_strings">Normal;Timing;Trail;Auto</string>
    <string name="opt_record_strings">Normal;Loop;Time-lapse</string>
    <string name="password">Password</string>
    <string name="phone_network">2G/3G/4G network</string>
    <string name="photo_bitrate_quality0">2M</string>
    <string name="photo_bitrate_quality1">5M</string>
    <string name="photo_bitrate_quality2">8M</string>
    <string name="photo_bitrate_quality3">12M</string>
    <string name="photo_bitrate_quality4">16M</string>
    <string name="photo_quality_0">Hyperfine</string>
    <string name="photo_quality_1">Fine</string>
    <string name="photo_quality_2">Normal</string>
    <string name="photo_resolution_0">2M</string>
    <string name="photo_resolution_1">5M</string>
    <string name="photo_resolution_2">8M</string>
    <string name="photo_resolution_3">12M</string>
    <string name="photo_resolution_4">16M</string>
    <string name="playmp4_has_dl">[Cache %1$.2f%%]</string>
    <string name="playmp4_has_downloaded">[Cached]</string>
    <string name="playmp4_loading">loading...</string>
    <string name="playmp4_loading_title">Video Cache</string>
    <string name="playmp4_over_index">The End!</string>
    <string name="please_wait">loading...</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pwd_error">Incorrect Password！</string>
    <string name="record_delay_time_0">Turn Off</string>
    <string name="record_delay_time_1">0.5s</string>
    <string name="record_delay_time_2">1s</string>
    <string name="record_delay_time_3">2s</string>
    <string name="record_delay_time_4">5s</string>
    <string name="record_delay_time_5">10s</string>
    <string name="record_delay_time_6">30s</string>
    <string name="record_delaytime0">Turn off</string>
    <string name="record_delaytime1">0.5s</string>
    <string name="set_pwd_hint">8 significant figures or letters</string>
    <string name="set_wifi_pwd">Wi-Fi Password</string>
    <string name="setting_title_tips">Settings</string>
    <string name="sure_total_exit_app">Confirm and Quit the program?</string>
    <string name="wifi_select">Select WiFi</string>
</resources>