<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ptr="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.xforce.v5.xdvpro.widget.X1NoSlideViewPager android:id="@+id/main_viewpager" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/main_radio"/>
    <RadioGroup android:gravity="center_vertical" android:layout_gravity="bottom" android:orientation="horizontal" android:id="@+id/main_radio" android:background="@drawable/bg_tabbar" android:layout_width="match_parent" android:layout_height="@dimen/tabbar_height" android:layout_alignParentBottom="true">
        <RadioButton android:id="@+id/main_btnvideo" android:tag="radio_button0" android:checked="false" android:text="@string/main_video" android:drawableTop="@drawable/tabbar_item_video" style="@style/main_tab_bottom"/>
        <RadioButton android:id="@+id/main_btnfile" android:tag="radio_button1" android:text="@string/main_file" android:drawableTop="@drawable/tabbar_item_file" style="@style/main_tab_bottom"/>
        <RadioButton android:id="@+id/main_btnsetting" android:tag="radio_button2" android:text="@string/main_setting" android:drawableTop="@drawable/tabbar_item_setting" style="@style/main_tab_bottom"/>
    </RadioGroup>
    <RelativeLayout android:id="@+id/main_tap_top_view" android:background="@drawable/top_title_bar_bg" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/title_height" android:layout_alignParentTop="true">
        <TextView android:textSize="@dimen/title_text" android:textColor="@color/black" android:id="@+id/main_tap_top_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="本地删除" android:layout_centerInParent="true"/>
        <Button android:textSize="@dimen/back_btn_textsize" android:textColor="@color/black_green_text_color" android:id="@+id/main_tap_top_back" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="@dimen/back_btn_height" android:layout_marginRight="@dimen/main_tap_btn_margin" android:text="@string/cancel" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout android:id="@+id/main_tap_bottom_view" android:background="@drawable/file_mult_bg" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/tabbar_height" android:layout_alignParentBottom="true">
        <Button android:textSize="@dimen/main_confirm_btn_textsize" android:textColor="@color/black_green_text_color" android:id="@+id/main_tap_bottom_choose" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="@dimen/back_btn_height" android:layout_marginLeft="@dimen/main_tap_btn_margin" android:text="@string/main_choose_all" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
        <TextView android:textSize="@dimen/main_bottom_tips_textsize" android:textColor="@color/groupitem_text" android:id="@+id/main_tap_bottom_tips" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_has_select" android:layout_centerInParent="true"/>
        <Button android:textSize="@dimen/main_confirm_btn_textsize" android:textColor="@color/main_color" android:id="@+id/main_tap_bottom_confirm" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="@dimen/back_btn_height" android:layout_marginRight="@dimen/main_tap_btn_margin" android:text="@string/confirm" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
</RelativeLayout>
