<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ptr="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/top_title" android:background="@drawable/top_title_bar_bg" android:layout_width="match_parent" android:layout_height="@dimen/title_height">
        <TextView android:textSize="@dimen/title_text" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/marginLeft" android:text="@string/set_wifi_pwd" android:layout_toRightOf="@+id/back_btn" android:layout_centerVertical="true"/>
        <Button android:textSize="@dimen/back_btn_textsize" android:textColor="@color/black_green_text_color" android:id="@+id/back_btn" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="@dimen/back_btn_height" android:layout_marginLeft="@dimen/back_btn_marginleft" android:text="@string/setting_title_tips" android:drawableLeft="@drawable/back_green_crow" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/setting_tips_textsize" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/setting_tips_marginleft" android:layout_marginTop="@dimen/setting_tips_margintop" android:layout_marginBottom="@dimen/setting_tips_marginbottom" android:text="@string/device_id"/>
            <EditText android:textSize="@dimen/setting_tips_textsize2" android:id="@+id/wifi_dev" android:background="@drawable/pwdset_item_item_bg" android:paddingLeft="@dimen/setting_tips_marginleft" android:layout_width="match_parent" android:layout_height="@dimen/setting_item_height" android:text=""/>
            <TextView android:textSize="@dimen/setting_tips_textsize" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/setting_tips_marginleft" android:layout_marginTop="@dimen/setting_tips_margintop" android:layout_marginBottom="@dimen/setting_tips_marginbottom" android:text="@string/old_password"/>
            <EditText android:textSize="@dimen/setting_tips_textsize" android:textColorHint="@color/edittext_color" android:id="@+id/wifi_old_pwd" android:background="@drawable/pwdset_item_item_bg" android:paddingLeft="@dimen/setting_tips_marginleft" android:layout_width="match_parent" android:layout_height="@dimen/setting_item_height" android:hint="@string/set_pwd_hint" android:password="true"/>
            <TextView android:textSize="@dimen/setting_tips_textsize" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/setting_tips_marginleft" android:layout_marginTop="@dimen/setting_tips_margintop" android:layout_marginBottom="@dimen/setting_tips_marginbottom" android:text="@string/new_password"/>
            <EditText android:textSize="@dimen/setting_tips_textsize" android:textColorHint="@color/edittext_color" android:id="@+id/wifi_new_pwd" android:background="@drawable/pwdset_item_item_bg" android:paddingLeft="@dimen/setting_tips_marginleft" android:layout_width="match_parent" android:layout_height="@dimen/setting_item_height" android:hint="@string/set_pwd_hint" android:password="true"/>
            <TextView android:textSize="@dimen/setting_tips_textsize" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/setting_tips_marginleft" android:layout_marginTop="@dimen/setting_tips_margintop" android:layout_marginBottom="@dimen/setting_tips_marginbottom" android:text="@string/confirm_password"/>
            <EditText android:textSize="@dimen/setting_tips_textsize" android:textColorHint="@color/edittext_color" android:id="@+id/wifi_confirm_pwd" android:background="@drawable/pwdset_item_item_bg" android:paddingLeft="@dimen/setting_tips_marginleft" android:layout_width="match_parent" android:layout_height="@dimen/setting_item_height" android:hint="@string/set_pwd_hint" android:password="true"/>
            <Button android:textSize="@dimen/title_text" android:textColor="@color/red_confirm" android:id="@+id/wifi_confirm" android:background="@drawable/pwd_set_confirm_btn_selector" android:layout_width="match_parent" android:layout_height="@dimen/setting_item_height" android:layout_marginTop="@dimen/setting_confirmbtn_margintop" android:text="@string/confirm"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
