<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ptr="http://schemas.android.com/apk/res-auto" android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/groupitem_bg" android:layout_width="match_parent" android:layout_height="wrap_content">
    <RelativeLayout android:background="@drawable/top_title_bar_bg" android:layout_width="match_parent" android:layout_height="@dimen/pwdinput_top_height">
        <Button android:textSize="@dimen/pwdinput_btn_textsize" android:textColor="@color/main_2_pressed_text_color" android:gravity="center" android:id="@+id/cancel" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="@dimen/pwdinput_btn_margin" android:text="@string/cancel" android:layout_alignParentLeft="true" android:layout_centerVertical="true"/>
        <Button android:textSize="@dimen/pwdinput_btn_textsize" android:textColor="@color/main_2_pressed_text_color" android:gravity="center" android:id="@+id/pwdinput_connect" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginRight="@dimen/pwdinput_btn_margin" android:text="@string/connect" android:layout_alignParentRight="true" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="@dimen/pwdinput_content_height">
        <TextView android:textSize="@dimen/pwdinput_content_textsize" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@+id/pwdinput_ssid" android:layout_width="match_parent" android:layout_height="@dimen/pwdinput_content_text_height" android:text="AWCDR_fa0a"/>
        <LinearLayout android:orientation="horizontal" android:background="@drawable/pwdset_item_item_bg" android:layout_width="match_parent" android:layout_height="@dimen/pwdinput_content_edit_height">
            <TextView android:textSize="@dimen/pwdinput_btn_textsize" android:textColor="@color/black" android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/password" android:layout_weight="2"/>
            <EditText android:textSize="@dimen/pwdinput_btn_textsize" android:textColor="@color/black" android:textColorHint="@color/edittext_color" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@+id/pwdinput_pwd" android:background="@color/transparent" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="match_parent" android:password="true" android:singleLine="true" android:layout_weight="1" android:textCursorDrawable="@drawable/edittext_cursor"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
